--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -114,11 +114,11 @@ position: fixed;
     </div>
 <div id="menu"><img src="Menu_Icon.png" width="30%" onclick="toggleMenuVisibility()" style="cursor: pointer;  opacity:.5"> </div>
     <div id="menuItems" class="menuItemsHidden">
-      <a href="#" onclick="changeSlides(slide0)">Home</a><br><br>
-    <a href="#" onclick="changeSlides(slide1)">The Atom</a><br><br>
-    <a href="#" onclick="changeSlides(slide2)">Current</a><br><br>
-    <a href="#" onclick="changeSlides(slide3)">Microwave Interactive Diagram</a><br><br>
-    <a href="#" onclick="changeSlides(slide4)">Module 4 - Power Supplies</a><br><br>
+      <a href="#" onclick="changeSlides(slide0); toggleMenuVisibility();">Home</a><br><br>
+    <a href="#" onclick="changeSlides(slide1); toggleMenuVisibility();">The Atom</a><br><br>
+    <a href="#" onclick="changeSlides(slide2); toggleMenuVisibility();">Current</a><br><br>
+    <a href="#" onclick="changeSlides(slide3); toggleMenuVisibility();">Microwave Interactive Diagram</a><br><br>
+    <a href="#" onclick="changeSlides(slide4); toggleMenuVisibility();">Module 4 - Power Supplies</a><br><br>
     <a href="#" onclick="changeSlides()">Module 5 - Series & Parllel Circuits</a><br><br>
     <a href="#" onclick="changeSlides()">Module 6 - DC Circuits</a><br><br>
     <a href="#" onclick="changeSlides()">Module 7 - AC Circuits</a><br><br>
@@ -187,7 +187,6 @@ position: fixed;
         TweenMax.from(iframeArray[i], 1, {opacity:1})
        }
     }
-   
   }
 
   function reverseClicked(){
@@ -205,5 +204,16 @@ position: fixed;
        }
     }
   }
+
+  function changeSlides(slide){
+    var iframeArray = document.getElementsByTagName("iframe");
+    for(i=0; i<iframeArray.length; i++){
+        TweenMax.to(iframeArray[i], .001, {className:"iframeHidden"})
+         TweenMax.from(iframeArray[i], 1, {opacity:1})
+       }
+        TweenMax.to(slide, .001, {className:"iframeVisible"})
+        TweenMax.from(slide, 1, {opacity:1})
+    }
+  
 </script>
 </html>
