--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -213,6 +213,9 @@ position: fixed;
        }
         TweenMax.to(slide, .001, {className:"iframeVisible"})
         TweenMax.from(slide, 1, {opacity:1})
+        slideSplit = slide.id.split("slide")
+        slideNumber = slideSplit[1]
+
     }
   
 </script>
