--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -88,33 +88,33 @@ position: fixed;
   right: .5px;
   z-index: 5000;
 }
-/*.resp-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}*/
+
 </style>
 
 
 </head>
 
 <body bgcolor="#D3D3D3">
+  //Start Slides//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
   <iframe id="slide0" class="iframeVisible" src="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity/newSlide1/slide1Html.html"></iframe>
   <iframe id="slide1" class="iframeHidden" src="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity/newSlide2/slide2Html.html"></iframe>
   <iframe id="slide2" class="iframeHidden" src="https://robertmayeight.github.io/Training/New%20Hire%20Training/Apprentice_Basic_Electricity/newSlide3/slide3Html.html"></iframe>
   <iframe id="slide3" class="iframeHidden" src="https://robertmayeight.github.io/Training/New%20Hire%20Training/1%20tmTimerDefIAS/tmTimerDefIAS.html"></iframe>
 
+//End Slids///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
   <div id="navButtons">
       <img src="Reverse_Arrow.png" width="10%" onclick="reverseClicked()" onmouseover="" style="cursor: pointer; opacity:.5">
        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
        <img src="Forward_Arrow.png" width="10%" onclick="forwardClicked()" onmouseover="" style="cursor: pointer;  opacity:.5">
     </div>
 <div id="menu"><img src="Menu_Icon.png" width="30%" onclick="toggleMenuVisibility()" style="cursor: pointer;  opacity:.5"> </div>
+
+
+
+
     <div id="menuItems" class="menuItemsHidden">
-      <a href="#" onclick="changeSlides(slide0); toggleMenuVisibility();">Home</a><br><br>
+    <a href="#" onclick="changeSlides(slide0); toggleMenuVisibility();">Home</a><br><br>
     <a href="#" onclick="changeSlides(slide1); toggleMenuVisibility();">The Atom</a><br><br>
     <a href="#" onclick="changeSlides(slide2); toggleMenuVisibility();">Current</a><br><br>
     <a href="#" onclick="changeSlides(slide3); toggleMenuVisibility();">Microwave Interactive Diagram</a><br><br>
@@ -152,8 +152,11 @@ position: fixed;
     <a href="#" onclick="changeSlides()">Module 9 - The Atom</a>
   </div>
 
+
+
 </body>
 <script src="../../JavaScriptLibraries/TweenMax.min.js"></script>
+<script src="d3.min.js"></script>
 <script type="text/javascript">
   var slideNumber = 0;
   function toggleMenuVisibility(){
