--- a/New Hire Training/Apprentice_Basic_Electricity/newSlide3/slide3Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/newSlide3/slide3Html.html
@@ -42,7 +42,7 @@
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <audio id='music' controls='controls' class="playerControls" style="opacity: 0"></audio>
 </body>
-<script src="d3.min.js"></script>
+<script src="../JavaScriptLibraries/d3.min.js"></script>
 <script src="TweenMax.min.js"></script>
 <script src="draggable.js"></script>
 <script src="DrawSVGPlugin.min.js"></script>
