--- a/New Hire Training/Apprentice_Basic_Electricity/newSlide1/slide1Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/newSlide1/slide1Html.html
@@ -31,6 +31,7 @@
 </style>
 </head>
 <body>
+  <div id="test">some text</div>
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <!-- <audio id='music' controls='controls' class="playerControls">
     <source src='slide2Audio.ogg' type='audio/ogg' />
