--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -43,7 +43,7 @@
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <audio id='music' controls='controls' class="playerControls" style="opacity: 0" ></audio>
 
-  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+ <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
 <svg
@@ -12698,9 +12698,9 @@
      inkscape:window-height="986"
      id="namedview4"
      showgrid="false"
-     inkscape:zoom="2"
-     inkscape:cx="299.24995"
-     inkscape:cy="302.55947"
+     inkscape:zoom="1.4142136"
+     inkscape:cx="165.94876"
+     inkscape:cy="341.352"
      inkscape:window-x="1909"
      inkscape:window-y="-11"
      inkscape:window-maximized="1"
@@ -12720,20 +12720,13 @@
      id="layer3"
      inkscape:label="Background 1"
      style="display:inline"><rect
-       style="display:inline;opacity:1;vector-effect:none;fill:#262626;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1.86044478;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;shape-rendering:crispEdges;enable-background:new"
-       id="mainBackground"
-       width="723.09625"
-       height="542.81329"
-       x="-4.7412109e-007"
-       y="-0.89707291"
-       inkscape:label="#rect5127" /><rect
-       transform="translate(42.287498,-14.512686)"
        style="display:inline;opacity:1;vector-effect:none;fill:#ff5524;fill-opacity:1;fill-rule:evenodd;stroke:#00ffff;stroke-width:1.73844409;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;shape-rendering:crispEdges;enable-background:new"
        id="rect9529"
        width="760.15198"
        height="649.6405"
        x="-962.1637"
-       y="-9.2460136" /></g><g
+       y="-9.2460136"
+       transform="translate(42.287498,-14.512686)" /></g><g
      inkscape:groupmode="layer"
      id="layer4"
      inkscape:label="LIghtning Image"
@@ -12815,6 +12808,10 @@
      id="tspan3395"
      x="112.85476"
      y="180.11456" /></text>
+
+
+
+
 
 
 
@@ -12964,6 +12961,10 @@
 
 
 
+
+
+
+
 </g>
 <g
    style="display:inline;opacity:0.98999999"
@@ -13095,6 +13096,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:8px;line-height:1.25;font-family:Arial;-inkscape-font-specification:Arial;letter-spacing:0px;word-spacing:0px;display:inline;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:1"
@@ -13123,6 +13128,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;fill:#ffffff;fill-opacity:1;stroke:none"
@@ -13134,6 +13143,10 @@
      id="tspan4477"
      x="140.01332"
      y="92.157021">Atom</tspan></text>
+
+
+
+
 
 
 
@@ -13219,6 +13232,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill:#ffffff;fill-opacity:1;stroke:none"
@@ -13230,6 +13247,10 @@
      id="tspan2410"
      x="470.17554"
      y="142.64484">Nucleus</tspan></text>
+
+
+
+
 
 
 
@@ -13276,6 +13297,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:29.7578392px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.79708499"
@@ -13288,6 +13313,10 @@
      x="-29.746206"
      y="469.67355"
      style="font-size:21.33333397px;fill:#ffffff;stroke-width:0.79708499">Neutrally charged neutrons.</tspan></text>
+
+
+
+
 
 
 
@@ -13505,6 +13534,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill:#ffffff;fill-opacity:1;stroke:none"
@@ -13516,6 +13549,10 @@
      id="tspan3593"
      x="41.555092"
      y="230.86606">Planets = Electrons</tspan></text>
+
+
+
+
 
 
 
@@ -13578,6 +13615,10 @@
 
 
 
+
+
+
+
 </g><g
        style="display:inline;opacity:0.77868808;stroke:#00ff00;stroke-opacity:1;shape-rendering:crispEdges"
        id="missingElecron2-8-0"
@@ -13593,6 +13634,10 @@
      x="623.45087"
      y="60.626125"
      style="stroke:#00ff00;stroke-width:0.62900025;stroke-opacity:1" /></text>
+
+
+
+
 
 
 
@@ -13773,6 +13818,10 @@
 
 
 
+
+
+
+
 </g></g><g
      style="display:inline;opacity:0.92000002;stroke:none;stroke-opacity:1"
      id="outerBand-9"
@@ -13797,6 +13846,10 @@
      x="623.45087"
      y="60.626125"
      style="stroke:none;stroke-width:0.62900025;stroke-opacity:1" /></text>
+
+
+
+
 
 
 
@@ -13986,6 +14039,10 @@
 
 
 
+
+
+
+
 </g></g><g
      style="display:inline;opacity:0.92000002;stroke:none;stroke-opacity:1"
      id="freeElectron"
@@ -14026,6 +14083,10 @@
 
 
 
+
+
+
+
 </g></g></g><text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;fill:#ffffff;fill-opacity:1;stroke:none;enable-background:new"
@@ -14047,6 +14108,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:37.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.92000002;fill:#ffffff;fill-opacity:1;stroke:none;enable-background:new"
@@ -14059,6 +14124,10 @@
      x="56.909477"
      y="118.48799"
      style="font-size:26.66666603px;fill:#ffffff">More Negative</tspan></text>
+
+
+
+
 
 
 
@@ -14117,6 +14186,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:27.55372047px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none;enable-background:new"
@@ -14128,6 +14201,10 @@
      x="609.19238"
      y="352.26181"
      style="fill:#ffffff;stroke:none;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none">N</tspan></text>
+
+
+
+
 
 
 
@@ -14181,6 +14258,10 @@
 
 
 
+
+
+
+
 <text
    xml:space="preserve"
    style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:27.55372047px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;opacity:0.98999999;fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none;enable-background:new"
@@ -14192,6 +14273,10 @@
      x="609.19238"
      y="352.26181"
      style="fill:#ffffff;stroke:#000000;stroke-width:1;stroke-linecap:round;stroke-miterlimit:4.06838226;stroke-dasharray:none">N</tspan></text>
+
+
+
+
 
 
 
@@ -14212,7 +14297,8 @@
      inkscape:label="Module Loading"
      style="display:inline"><g
        id="moduleLoadingIcon"
-       inkscape:label="#g3657"><rect
+       inkscape:label="#g3657"
+       transform="translate(-1.5481257,-0.50957674)"><rect
    inkscape:label="#rect5127"
    y="-0.89706999"
    x="-4.7412109e-007"
@@ -14231,7 +14317,31 @@
      sodipodi:role="line">Module is Loading</tspan></text>
 
 
-</g></g></svg>
+
+
+
+
+<circle
+   style="opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#ffffff;stroke-width:7.55905533;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke"
+   id="path4067"
+   cx="360.94153"
+   cy="313.14563"
+   r="15.5" /><circle
+   style="display:inline;opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#ffffff;stroke-width:7.55905533;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke;shape-rendering:crispEdges;enable-background:new"
+   id="path4067-2"
+   cx="243.94153"
+   cy="314.14563"
+   r="15.5" /><circle
+   style="display:inline;opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#ffffff;stroke-width:7.55905533;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke;shape-rendering:crispEdges;enable-background:new"
+   id="path4067-9"
+   cx="477.94153"
+   cy="313.14563"
+   r="15.5" /></g><circle
+       style="display:inline;opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:7.55905533;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke;shape-rendering:crispEdges;enable-background:new"
+       id="path4067-9-3"
+       cx="141.42136"
+       cy="443.83347"
+       r="15.5" /></g></svg>
 </body>
 <script src="JavaScripts/d3.min.js"></script>
 <script src="JavaScripts/TweenMax.min.js"></script>
