--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6VIkPjXuA9H/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6VIkPjXuA9H/slide2Html.html
@@ -41,7 +41,13 @@
 </head>
 <body>
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls" style="opacity: 0" ></audio>
+  <audio id='music' controls='controls' class="playerControls" style="opacity: 0" >
+    <source src="slide2Audio.mp3" type="audio/wav">
+      <source src="slide2Audio.wav" type="audio/wav">
+    <source src="slide2Audio.ogg" type="audio/ogg">
+    
+
+  </audio>
 
  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
@@ -12785,7 +12791,7 @@
      inkscape:window-x="1909"
      inkscape:window-y="-11"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer14"
+     inkscape:current-layer="layer3"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
@@ -14488,7 +14494,7 @@
      inkscape:groupmode="layer"
      id="layer11"
      inkscape:label="Module Loading"
-     style="display:none"
+     style="display:inline"
      transform="translate(1.5481261,3.4883829)"><g
        id="moduleLoadingIcon"
        inkscape:label="#g3657"
