--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6dsx35Lby16/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6dsx35Lby16/slide2Html.html
@@ -41,8 +41,8 @@
 </head>
 <body>
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls" style="opacity: 0" >
-    <source src="slide2Audio.mp3" type="audio/wav">
+  <audio id='music' controls='controls' class="playerControls">
+    <source src="slide2Audio.mp3" type="audio/mp3">
       <source src="slide2Audio.wav" type="audio/wav">
     <source src="slide2Audio.ogg" type="audio/ogg">
     
