--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -10,6 +10,7 @@
     margin: 0px;
     text-align: center;
     background: #262626;
+    background-image: "htmlBackground.png";
   }
   .mainWindow {
     position: fixed;
@@ -25,7 +26,7 @@
     position: fixed;
     left: 0px;
     padding: 1px;
-    top:95%;
+    top:94%;
     margin: auto;
     width: 100%;
   }
@@ -12791,7 +12792,7 @@
      inkscape:window-x="1909"
      inkscape:window-y="-11"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer3"
+     inkscape:current-layer="layer11"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
