--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -12792,7 +12792,7 @@
      inkscape:window-x="1909"
      inkscape:window-y="-11"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer3"
+     inkscape:current-layer="layer18"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
@@ -14519,40 +14519,7 @@
      inkscape:groupmode="layer"
      id="layer18"
      inkscape:label="Net Charge"
-     style="display:none" /><g
-     inkscape:groupmode="layer"
-     id="layer11"
-     inkscape:label="Module Loading"
-     style="display:none"
-     transform="translate(1.5481261,3.4883829)"><g
-       id="moduleLoadingIcon"
-       inkscape:label="#g3657"
-       transform="matrix(0.93937192,0,0,0.93937192,-1.5481257,-2.6457005)"><rect
-   inkscape:label="#rect5127"
-   y="-0.89706999"
-   x="-4.7412109e-007"
-   height="542.81329"
-   width="723.09625"
-   id="mainBackground-2"
-   style="display:inline;opacity:1;vector-effect:none;fill:#262626;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1.86044478;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;shape-rendering:crispEdges;enable-background:new" /><text
-   id="text3455"
-   y="283.98615"
-   x="144.75125"
-   style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:53.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-position:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-alternates:normal;font-feature-settings:normal;text-indent:0;text-align:start;text-decoration:none;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000000;letter-spacing:0px;word-spacing:0px;text-transform:none;writing-mode:lr-tb;direction:ltr;text-orientation:mixed;dominant-baseline:auto;baseline-shift:baseline;text-anchor:start;white-space:normal;shape-padding:0;display:inline;opacity:0.9;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2.5999999;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke;shape-rendering:crispEdges;enable-background:new"
-   xml:space="preserve"><tspan
-     id="tspan3651"
-     y="283.98615"
-     x="144.75125"
-     sodipodi:role="line">Module is Loading</tspan></text>
-
-
-
-
-
-
-
-
-</g></g></svg>
+     style="display:none" /></svg>
 
 </body>
 <script src="JavaScripts/d3.min.js"></script>
