--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -12787,12 +12787,12 @@
      id="namedview4"
      showgrid="false"
      inkscape:zoom="1.4142136"
-     inkscape:cx="30.276508"
-     inkscape:cy="229.86368"
+     inkscape:cx="225.43797"
+     inkscape:cy="234.10632"
      inkscape:window-x="1909"
      inkscape:window-y="-11"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer18"
+     inkscape:current-layer="layer17"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
@@ -14552,6 +14552,30 @@
 
 
 
+</g></g><g
+     inkscape:groupmode="layer"
+     id="layer17"
+     inkscape:label="Press Play"><g
+       style="display:inline;shape-rendering:crispEdges;enable-background:new"
+       id="pressPlayIcon_drag"
+       inkscape:label="#g3657"
+       transform="matrix(0.93937192,0,0,0.93937192,-1.3744421e-5,0.84268175)"><rect
+         inkscape:label="#rect5127"
+         y="-0.89706999"
+         x="-4.7412109e-007"
+         height="542.81329"
+         width="723.09625"
+         id="mainBackground-2-3"
+         style="display:inline;opacity:1;vector-effect:none;fill:#262626;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1.86044478;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;shape-rendering:crispEdges;enable-background:new" /><text
+         id="text3455-6"
+         y="284.31165"
+         x="133.26689"
+         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:53.33333206px;line-height:1.25;font-family:Arial;-inkscape-font-specification:'Arial, Normal';font-variant-ligatures:normal;font-variant-position:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-alternates:normal;font-feature-settings:normal;text-indent:0;text-align:start;text-decoration:none;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000000;letter-spacing:0px;word-spacing:0px;text-transform:none;writing-mode:lr-tb;direction:ltr;text-orientation:mixed;dominant-baseline:auto;baseline-shift:baseline;text-anchor:start;white-space:normal;shape-padding:0;display:inline;opacity:0.9;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2.5999999;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:26;stroke-opacity:1;paint-order:fill markers stroke;shape-rendering:crispEdges;enable-background:new"
+         xml:space="preserve"><tspan
+           id="tspan3651-9"
+           y="284.31165"
+           x="133.26689"
+           sodipodi:role="line">Press Play To Start</tspan></text>
 </g></g></svg>
 
 </body>
