--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -14526,7 +14526,8 @@
        style="display:inline;shape-rendering:crispEdges;enable-background:new"
        id="pressPlayIcon_drag"
        inkscape:label="#g3657"
-       transform="matrix(0.93937192,0,0,0.93937192,-1.3744421e-5,0.84268175)"><rect
+       transform="matrix(0.93937192,0,0,0.93937192,-1.3744421e-5,0.84268175)"
+       onclick="slide1Tl.play();"><rect
          inkscape:label="#rect5127"
          y="-0.89706999"
          x="-4.7412109e-007"
