--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6BN65Z1aJBD/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6BN65Z1aJBD/slide2Html.html
@@ -14527,7 +14527,7 @@
        id="pressPlayIcon_drag"
        inkscape:label="#g3657"
        transform="matrix(0.93937192,0,0,0.93937192,-1.3744421e-5,0.84268175)"
-       onclick="slide1Tl.play();"><rect
+       onclick=""><rect
          inkscape:label="#rect5127"
          y="-0.89706999"
          x="-4.7412109e-007"
