--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6KDCIyUXg5i/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6KDCIyUXg5i/slide2Html.html
@@ -26,9 +26,10 @@
     position: fixed;
     left: 0px;
     padding: 1px;
-    top:95%;
+    top:92%;
     margin: auto;
     width: 100%;
+    padding: 10px;
   }
   .slideHeading{
     position: fixed;
@@ -37,6 +38,7 @@
     top: 20%
     font-size: xx-large;
   }
+
   </style>
 
 </head>
