--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6CFDFOfpWTo/slide2Html.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/6CFDFOfpWTo/slide2Html.html
@@ -11,6 +11,7 @@
     text-align: center;
     background: #262626;
     background-image: "htmlBackground.png";
+    overflow: hidden;
   }
   .mainWindow {
     position: fixed;
@@ -22,15 +23,15 @@
     height:100vh;
     overflow: hidden;
   }
+
     .playerControls {
-    position: fixed;
+    position: absolute;
     left: 0px;
-    padding: 1px;
-    top:92%;
+    bottom:0px;
     margin: auto;
     width: 100%;
-    padding: 10px;
   }
+
   .slideHeading{
     position: fixed;
     margin: auto;
