--- a/New Hire Training/Clays_Projects/Microwave_Training/PVM_Diagram/PVM_Diagram.html
+++ b/New Hire Training/Clays_Projects/Microwave_Training/PVM_Diagram/PVM_Diagram.html
@@ -4,7 +4,7 @@
   <title>TMNF Timer Defrost Interactive Schematic</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
-  <link rel="stylesheet" href="../../../JavaScriptLibraries/testCss.css">
+  <link rel="stylesheet" href="JavaScripts/testCss.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
@@ -22,9 +22,11 @@
     <div id="blackBox" onclick="changeColors('black')" style="cursor:pointer;display:block; width:100%; background-color:black; color:white";><center>Black</center></div>
 </div>
 </body>
-<script src="../../../JavaScriptLibraries/TweenMax.min.js"></script>
-<script src="../../../JavaScriptLibraries/ThrowPropsPlugin.js"></script>
-<script src="../../../JavaScriptLibraries/Draggable.min.js"></script>
+<script src="JavaScripts/d3.min.js"></script>
+<script src="JavaScripts/TweenMax.min.js"></script>
+<script src="JavaScripts/draggable.js"></script>
+<script src="JavaScripts/DrawSVGPlugin.min.js"></script>
+<script src="JavaScripts/MorphSVGPlugin.js"></script>
 <script src="javaScript.js"></script>
 </html>
 
