--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/5WIOGnowhyR/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/5WIOGnowhyR/slide.html
@@ -1,4 +1,56 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Apprentice - Basic Electricity</title>
+  <meta charset="UTF-8">
+  <!DOCTYPE html>
+  <style type="text/css">
+  body {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    background: #262626;
+    overflow: hidden;
+  }
+  .mainWindow {
+    position: fixed;
+    left: 0%;
+    top: 0%
+    margin: auto;
+    padding:0;
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+  }
+
+    .playerControls {
+    position: absolute;
+    left: 0%;
+    bottom:0px;
+    margin: auto;
+    width: 100%;
+  }
+  .chromePlayerControls{
+     position: absolute;
+    left: 0px;
+    bottom:0px;
+    margin: auto;
+    width: 100%;
+  }
+
+  .slideHeading{
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    top: 20%
+    font-size: xx-large;
+  }
+
+</style>
+</head>
+<body>
+  <div id="main" class="mainWindow" style="align-content: center;">
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
 <svg
@@ -26408,13 +26460,13 @@
      inkscape:window-height="1442"
      id="namedview4"
      showgrid="true"
-     inkscape:zoom="4.0000001"
-     inkscape:cx="176.25976"
-     inkscape:cy="466.77464"
+     inkscape:zoom="5.6568544"
+     inkscape:cx="30.17264"
+     inkscape:cy="-1.2548429"
      inkscape:window-x="-11"
      inkscape:window-y="69"
      inkscape:window-maximized="1"
-     inkscape:current-layer="r2Slider"
+     inkscape:current-layer="pauseIcon"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
@@ -32614,4 +32666,66 @@
        y="1"
        rx="0.121848"
        ry="4.0304799"
-       inkscape:label="#rect6693" /></g></svg>
+       inkscape:label="#rect6693" /></g><g
+     inkscape:groupmode="layer"
+     id="layer17"
+     inkscape:label="Player Controls"><g
+       id="pcSliderGroup"
+       inkscape:label="#g7070"
+       transform="translate(0,-3.0017414)"><rect
+         inkscape:label="#rect7064"
+         y="517.99823"
+         x="0"
+         height="25.003511"
+         width="720"
+         id="pcSliderBackground"
+         style="opacity:0.98999999;vector-effect:none;fill:#4d4d4d;fill-opacity:1;stroke:none;stroke-width:1.49203408;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" /><path
+         style="opacity:1;vector-effect:none;fill:none;fill-opacity:1;stroke:#000000;stroke-width:1.58276188;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+         d="M 102.985,531.5 H 701.37958"
+         id="pcSliderContainer"
+         inkscape:connector-curvature="0"
+         inkscape:label="#path7072"
+         sodipodi:nodetypes="cc" /><circle
+         inkscape:label="#path7066"
+         r="11.667261"
+         cy="530.66119"
+         cx="114.89191"
+         id="pcSliderKnob"
+         style="opacity:0.98999999;vector-effect:none;fill:#999999;fill-opacity:1;stroke:none;stroke-width:1.49399996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" /></g><g
+       id="pausePlayButton"
+       inkscape:label="#g7110"
+       transform="matrix(1.18125,0,0,1.2864335,-15.452493,-153.04312)"><rect
+         y="519.4939"
+         x="13.081475"
+         height="19.445436"
+         width="28.284271"
+         id="rect7074"
+         style="opacity:0.98999999;vector-effect:none;fill:#4d4d4d;fill-opacity:1;stroke:none;stroke-width:1.49399996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" /><path
+         inkscape:label="#path7076"
+         inkscape:connector-curvature="0"
+         id="playIcon"
+         d="m 21.92031,522.14555 10.253048,7.42463 -10.253048,7.24784 z"
+         style="opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" /><g
+         transform="translate(4.9497473,0.17677669)"
+         inkscape:label="#g7103"
+         id="pauseIcon"><path
+           style="opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;stroke:#ffffff;stroke-width:2.43364191;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+           d="m 18.486908,522.67588 v 13.78859"
+           id="path7078"
+           inkscape:connector-curvature="0" /><path
+           style="opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;stroke:#ffffff;stroke-width:2.43364191;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+           d="m 25.100664,522.67588 v 13.78859"
+           id="path7078-9"
+           inkscape:connector-curvature="0" /></g></g></g></svg>
+  </div>
+  <audio style="height:15px" id='music'   class="playerControls" ></audio>
+</body>
+<script src=JavaScripts/jquery.js></script>
+<script src="JavaScripts/d3.min.js"></script>
+<script src="JavaScripts/TweenMax.min.js"></script>
+<script src="JavaScripts/draggable.js"></script>
+<script src="JavaScripts/DrawSVGPlugin.min.js"></script>
+<script src="JavaScripts/MorphSVGPlugin.js"></script>
+<script src="slide.js"></script>
+</html>
+<!-- controls="controls" -->
