--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
@@ -26460,13 +26460,13 @@
      inkscape:window-height="1442"
      id="namedview4"
      showgrid="true"
-     inkscape:zoom="5.6568544"
-     inkscape:cx="30.17264"
-     inkscape:cy="-1.2548429"
+     inkscape:zoom="1"
+     inkscape:cx="99.880891"
+     inkscape:cy="230.04601"
      inkscape:window-x="-11"
      inkscape:window-y="69"
      inkscape:window-maximized="1"
-     inkscape:current-layer="pauseIcon"
+     inkscape:current-layer="layer17"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
