--- a/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/61dfottOMKV/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_content/WebObjects/61dfottOMKV/slide.html
@@ -1,4 +1,56 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Apprentice - Basic Electricity</title>
+  <meta charset="UTF-8">
+  <!DOCTYPE html>
+  <style type="text/css">
+  body {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    background: #262626;
+    overflow: hidden;
+  }
+  .mainWindow {
+    position: fixed;
+    left: 0%;
+    top: 0%
+    margin: auto;
+    padding:0;
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+  }
+
+    .playerControls {
+    position: absolute;
+    left: 0%;
+    bottom:0px;
+    margin: auto;
+    width: 100%;
+  }
+  .chromePlayerControls{
+     position: absolute;
+    left: 0px;
+    bottom:0px;
+    margin: auto;
+    width: 100%;
+  }
+
+  .slideHeading{
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    top: 20%
+    font-size: xx-large;
+  }
+
+</style>
+</head>
+<body>
+  <div id="main" class="mainWindow" style="align-content: center;">
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
 <svg
@@ -32618,7 +32670,7 @@
      inkscape:groupmode="layer"
      id="layer17"
      inkscape:label="Player Controls"><g
-       id="pcSliderGroup"
+       id="pcSliderGroup_hide"
        inkscape:label="#g7070"
        transform="translate(0,-3.0017414)"><rect
          inkscape:label="#rect7064"
@@ -32665,3 +32717,15 @@
            d="m 25.100664,522.67588 v 13.78859"
            id="path7078-9"
            inkscape:connector-curvature="0" /></g></g></g></svg>
+  </div>
+  <audio style="height:15px" id='music'   class="playerControls" ></audio>
+</body>
+<script src=JavaScripts/jquery.js></script>
+<script src="JavaScripts/d3.min.js"></script>
+<script src="JavaScripts/TweenMax.min.js"></script>
+<script src="JavaScripts/draggable.js"></script>
+<script src="JavaScripts/DrawSVGPlugin.min.js"></script>
+<script src="JavaScripts/MorphSVGPlugin.js"></script>
+<script src="slide.js"></script>
+</html>
+<!-- controls="controls" -->
