--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
@@ -32670,7 +32670,7 @@
      inkscape:groupmode="layer"
      id="layer17"
      inkscape:label="Player Controls"><g
-       id="pcSliderGroup"
+       id="pcSliderGroup_hide"
        inkscape:label="#g7070"
        transform="translate(0,-3.0017414)"><rect
          inkscape:label="#rect7064"
