--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
@@ -26461,12 +26461,12 @@
      id="namedview4"
      showgrid="true"
      inkscape:zoom="1"
-     inkscape:cx="97.880891"
+     inkscape:cx="99.880891"
      inkscape:cy="230.04601"
      inkscape:window-x="-11"
      inkscape:window-y="69"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer17"
+     inkscape:current-layer="layer7"
      fit-margin-top="0"
      fit-margin-left="0"
      fit-margin-right="0"
@@ -32657,8 +32657,8 @@
      inkscape:groupmode="layer"
      id="layer7"
      inkscape:label="Cover"
-     style="display:none"><rect
-       style="opacity:0.73699999;vector-effect:none;fill:#000000;fill-opacity:1;stroke:#333333;stroke-width:1.49399996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke"
+     style="display:inline"><rect
+       style="opacity:1;vector-effect:none;fill:#000000;fill-opacity:1;stroke:#333333;stroke-width:1.49399996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke"
        id="cover_hide"
        width="722"
        height="539"
