--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
@@ -32718,7 +32718,7 @@
            id="path7078-9"
            inkscape:connector-curvature="0" /></g></g></g></svg>
   </div>
-  <audio style="height:15px" id='slideAudio' class="playerControls" preload="auto">
+  <audio style="height:15px" id='slideAudio9' class="playerControls" preload="auto">
     <source src="slide.mp3" type="audio/mp3">
   </audio>
 </body>
