--- a/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
+++ b/New Hire Training/Apprentice_Basic_Electricity_Test/slide9/slide.html
@@ -38,6 +38,14 @@
     width: 100%;
     height: 20px;
   }
+   .edgePlayerControls{
+     position: absolute;
+    left: -500px;
+    bottom:-600px;
+    margin: 0 auto;
+    width: 50%;
+    height: 200px;
+  }
 </style>
 </head>
 <body>
